--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for AnyEvent::Twitter
 
-0.1 Mon Jul 13 09:13:53 CEST 2009
+0.2     Mon Aug 10 10:07:28 CEST 2009
+        - fixed some missing documentation.
+        - using common::sense for all scripts and modules.
+
+0.1     Mon Jul 13 09:13:53 CEST 2009
         - initial release
