Import of PUNYTAN/AnyEvent-Twitter-0.53 from CPAN.
gitpan-cpan-distribution: AnyEvent-Twitter
gitpan-cpan-version:      0.53
gitpan-cpan-path:         PUNYTAN/AnyEvent-Twitter-0.53.tar.gz
gitpan-cpan-author:       PUNYTAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension AnyEvent::Twitter
 
+0.53    Mon Jun 20 21:30:32 2011
+        - fix documentation
+
 0.52    Mon Nov 22 06:28:11 JST 2010
         - new arguments for new().
         - added get() and post() method.
