Import of PUNYTAN/AnyEvent-Twitter-0.62 from CPAN.
gitpan-cpan-distribution: AnyEvent-Twitter
gitpan-cpan-version:      0.62
gitpan-cpan-path:         PUNYTAN/AnyEvent-Twitter-0.62.tar.gz
gitpan-cpan-author:       PUNYTAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,18 @@
 Revision history for Perl extension AnyEvent::Twitter
 
+0.62    Thu Jul 21 20:00:39 JST 2011
+        - documentation fix
+        - clean code up
+
+0.61    Wed Jul 20 06:12:29 JST 2011
+        - remove deps: Net::Twitter::Lite
+        - document get_access_token() and get_request_token()
+
+0.60    Wed Jul 20 04:30:23 JST 2011
+        - refactoring
+        - add get_request_token() *undocumented
+        - add get_access_token() *undocumented
+
 0.53    Mon Jun 20 21:30:32 2011
         - fix documentation
 
